<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexbe_navigation_states</name>
  <version>1.0.1</version>
  <description>
     flexbe_navigation_states provides a collection of robot-agnostic
     states related to mobile robot navigation.
  </description>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <maintainer email="philipp.schillinger@de.bosch.com">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <flexbe_states/>
  </export>

</package>
