<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexbe_utility_states</name>
  <version>1.0.1</version>
  <description>
     Provides a collection of generic states mainly for development and debugging purposes.
  </description>
  <maintainer email="philipp.schillinger@de.bosch.com">Philipp Schillinger</maintainer>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_testing</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <flexbe_states/>
  </export>

</package>
